--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,58 @@ svg.navbar-icons{
     width:25px;
 }
 
+.user{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top:30px;
+    margin-left:30px;
+    padding-left: 10px;
+    padding-right: 30px;
+}
+
+.profile-pic{
+    margin-right:10px;
+}
+
+.left p{
+    font-size: 12px;
+    font-weight: bold;
+}
+
+.left h4{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+.left{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.right{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width:33%;
+}
+
+button{
+    width:80px;
+    height:30px;
+    background-color: #0ea5e9;
+    border: #0ea5e9;
+    border-radius: 15px;
+    color: #ffffff;
+    font-weight: bold;
+}
+
+
 .content{
     background-color:#e2e8f0;
 }
