--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body{
 }
 
 .sidebar{
-    height:100vh;
+    height:122vh;
     background-color:#0ea5e9;
     color:#ffffff;
 }
@@ -114,7 +114,7 @@ svg.navbar-icons{
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin-top:30px;
+    margin:15px 5px;
     margin-left:30px;
     padding-left: 10px;
     padding-right: 30px;
@@ -163,4 +163,54 @@ button{
 
 .content{
     background-color:#e2e8f0;
+    display:grid;
+    grid-template-columns: 3fr 1fr;
+    height: 100vh;
+}
+
+.projects h4{
+    margin-left:20px;
+    margin-top: 20px;
+}
+
+.cards{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: 20px;
+}
+
+
+
+.card{
+    background-color: #ffffff;
+    width:270px;
+    height:140px;
+    border-left: 8px solid #fbbf24;
+    border-radius: 10px;
+    margin: 10px 0px;
+    padding:20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.card-icons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    width:100%;
+    margin-top: 30px;
+}
+
+.card p{
+    font-size:13px;
+    color:#9ca3af;
+}
+
+svg.card-icon{
+    width:20px;
+    height:20px;
+    margin: 10px;
 }
